添加游戏开始，游戏进行中，游戏结束三个状态的UI

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -32,5 +32,13 @@
       "4": 10,
       "5": 2
     }
+  },
+  "general": {
+    "designResolution": {
+      "fitHeight": true,
+      "width": 1080,
+      "height": 2400,
+      "fitWidth": true
+    }
   }
 }
