--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -38,7 +38,7 @@
       "fitHeight": true,
       "width": 1080,
       "height": 2400,
-      "fitWidth": true
+      "fitWidth": false
     }
   },
   "script": {
